# voters_project_2.0

./: .gitignore  Electoral_Roll_Project_Requirements.docx  README.md  batch_gcs.py  batch_process.py  docai_json_to_excel.py  main.py  missing_age_gender_finder.py  missing_age_gender_finder_cloud.py  pdf.py  pyproject.toml  reprocess_excel.py  search_election_roll.py  stitch_cards.py  voter_analytics_app.py  voter_counter_app_documentation.md  voter_counter_app_fast.py  voter_counter_app_fast_3.0.py  voter_counter_app_fast_4.0.py  voter_counter_app_fast_5.0.py
cloud/: process_batch_headless.py  setup.sh  start_process.md  voter_processor_ui.py
cloud/.streamlit/: config.toml
docs/: complete_system_guide.md  multiple_vm_setup_guide.md  notification_options.md  vm_setup_guide.md  windows_vm_setup.md
